Added some authors

--- a/alantree.tex
+++ b/alantree.tex
@@ -14,15 +14,16 @@
 
 
 \title{\MakeUppercase{Notes on Growing a Tree in a Graph}}
-\author{Authors TBD}
-
-%   Luc~Devroye,
-%   Vida~Dujmovi\'c,
-%   Alan~Frieze,
+\author{
+%   Louigi Addario-Berry
+   Luc~Devroye,
+   Vida~Dujmovi\'c,
+   Alan~Frieze,
 %   G\'abor~Lugosi,
-%   Abbas~Mehrabian,
-%   Pat~Morin,
-%   Bruce~Reed,
+   Abbas~Mehrabian,
+%   Colin McDiarmid
+   Pat~Morin,
+   Bruce~Reed,
 %   and Anastasios~Sidiropoulos 
 %}
 
