Addressing Alan's comments

--- a/alantree.bib
+++ b/alantree.bib
@@ -1,7 +1,7 @@
 @Article{fill.pemantle:percolation,
    author = {James Allen Fill and Robin Pemantle},
    title = {Percolation, First-Passage Percolation and Covering Times
-            for Richardson's Model on the $n$-Cube},
+            for {R}ichardson's Model on the $n$-Cube},
    journal = {The Annals of Applied Probability},
    volume = 3,
    number = 2,
@@ -29,7 +29,7 @@
 
 @InCollection{bollobas.kohayakawa:on,
    author = {B{\'e}la Bollob{\'a}s and Yoshiharu Kohayakawa},
-   title = {On Richardson's Model on the Hypercube},
+   title = {On {R}ichardson's Model on the Hypercube},
    booktitle = {Combinatorics, Geometry, and Probability (Cambridge 1993)},
    pages = {129--137},
    publisher = {Cambridge University Press},
@@ -58,4 +58,14 @@
   pages     = {337--348},
   year      = {1994},
   url       = {http://dx.doi.org/10.1002/rsa.3240050207},
+}
+
+@article{bollobas:isoperimetric,
+  author    = {B{\'{e}}la Bollob{\'{a}}s},
+  title     = {The Isoperimetric Number of Random Regular Graphs},
+  journal   = {Eur. J. Comb.},
+  volume    = {9},
+  number    = {3},
+  pages     = {241--244},
+  year      = {1988},
 }
