--- a/patmorin.cls
+++ b/patmorin.cls
@@ -111,8 +111,8 @@
 
 %------------- Use this so pdflatex outputs US letter pages -------------
 %\usepackage[letterpaper]{hyperref}
-\usepackage[dvipsnames]{color}
-\definecolor{linkblue}{named}{MidnightBlue}
+%\usepackage[dvipsnames]{color}
+%\definecolor{linkblue}{named}{MidnightBlue}
 %\hypersetup{colorlinks=true, linkcolor=linkblue,  anchorcolor=linkblue,
 %	citecolor=linkblue, filecolor=linkblue, menucolor=linkblue,
 %	urlcolor=linkblue} 
