Another clarification in the bug

--- a/alantree.tex
+++ b/alantree.tex
@@ -1381,9 +1381,9 @@ This result is not new, though the proof is.
   \]
   where $X_i\sim\exponential(1)$ and
   \[
-     Y_i = \min\{A_{i,j}+B_{i,j} : j\in\{1,\ldots,ell^2\}\}
+     Y_i = \min\{A_{i,j}+B_{i,j} : j\in\{1,\ldots,\ell\}\}
   \]
-  is the minimum of $\ell^2$ $\erlang(2,1)$ random variables.  Is this enough?
+  is the minimum of $\ell$ $\erlang(2,1)$ random variables.  Is this enough?
 \end{todo}
   \end{enumerate}
   Notice that after each step of the algorithm, the distance to $t$ is
