--- a/alantree.tex
+++ b/alantree.tex
@@ -1375,15 +1375,16 @@ This result is not new, though the proof is.
     so these random variables are independent and, by \eqref{erlang-three}
     their minimum has expected value $C/r^{-1/3}$.
 \begin{todo}
-  Alan points out that this last statement is false.  Actually, the cost of this step is
-  \[
-     \min\{X_i + Y_i: i\in\{1,\ldots,d-\ell\} \}
-  \]
-  where $X_i\sim\exponential(1)$ and
-  \[
-     Y_i = \min\{A_{i,j}+B_{i,j} : j\in\{1,\ldots,\ell\}\}
-  \]
-  is the minimum of $\ell$ $\erlang(2,1)$ random variables.  Is this enough?
+  Alan points out that this last statement is false. There are only
+  $d-\ell$ choices for the first edge on the path $vxyz$, so if there
+  are more than $d-\ell$ paths, then some of them have the first edge
+  in common.
+
+  The correct thing to study is the following: We have a tree with
+  independent $\exponential(1)$ edge weights on the edges.  The tree
+  has height $3$ and all non-leaves have $\ell$ children except the root,
+  which has $d-\ell$ children.  What is the weight of the lightest root-to-leaf
+  path in this tree?
 \end{todo}
   \end{enumerate}
   Notice that after each step of the algorithm, the distance to $t$ is
