Figured out how to handle branching trees

--- a/alantree.tex
+++ b/alantree.tex
@@ -1584,4 +1584,64 @@ with all $X_i$ and $Y_i$ independent.  Let $M=\min\{Q_1,\ldots,Q_\delta\}$.
    The left hand side of this last equation is non-negative for all $d\ge 3$.
 \end{proof}
 
+\section{Tree Lemmas}
+
+Recall the simple Chernoff Bound: For a $\binomial(n,p)$ random variable $B$,
+\begin{equation}
+   \Pr\{B \le np/2\} \le \exp(-np/8) \enspace . \eqlabel{chernoff-a}
+\end{equation}
+\begin{lem}\lemlabel{easy-key}
+Let $\delta \ge d > 0$ be integers, and $0 < c \le \sqrt{\delta d}$, and let $T$ be a tree of height 2 whose root has $\delta$
+children and whose level 1 nodes each have $d$ children and whose edges
+are each assigned independent $\exponential(1)$ weights.  Then the
+probability that $T$ has no root-to-leaf path of weight less than
+$(c+1)/\sqrt{\delta d}$ is at most $e^{-c/4e} + e^{-2c/e}$.
+\end{lem}
+
+\begin{proof}
+   Let $X_1$ be the number of edges incident to the root that have weight at most $c/\sqrt{\delta d}$.  Then $X_1$ is a $\binomial(\delta, p)$ random variable with 
+\[
+    p=1-e^{-c/\sqrt{\delta d}} \ge \frac{2c}{e\sqrt{\delta d}} \enspace ,
+\]
+where the inequality uses the assumption that $c/\sqrt{\delta d} \le 1$.
+In particular from \eqref{chernoff-a},
+\[
+   \Pr\{X_1 < \delta p / 2 \} \le \exp\left(-\frac{\delta p}{8}\right) 
+   \le \exp\left(-\frac{c\sqrt{\delta}}{4e\sqrt{d}}\right) 
+   \le e^{-\frac{c}{4e}} \enspace .
+\]
+
+   Let $X_2$ denote the number of root-to-leaf paths in $T$ whose first
+   edge has weight at most $c/\sqrt{\delta d}$ and whose second edge has
+   weight at most $1/\sqrt{\delta d}$.  Then, conditional on $X_1$, $X_2$
+   is a $\binomial(d X_1, 1-e^{-1/\sqrt{\delta d}})$ random variable. Now we have
+\[
+   \Pr\{X_2 = 0\mid X_1 \ge \delta p/2\} \le
+   \left(e^{-\frac{1}{\sqrt{\delta d}}}\right)^{d\delta p/2}
+   \le e^{-2c/e} \enspace . \qedhere
+\]
+\end{proof}
+
+%From \lemref{easy-key}, we can easily obtain an upper bound on the expected
+%value of the weight, $X$, of the lightest root-to-leaf path in $T$:
+%\begin{align*}
+%  \E[X] & = \int_0^{\infty} \Pr\{X > x\}\, \mathrm{d}{x} \\
+%        & = \int_0^{\sqrt{\delta d}} \Pr\{X > x\}\, \mathrm{d}{x} 
+%           + \int_{\sqrt{\delta d}}^{\infty} \Pr\{X > x\}\, \mathrm{d}{x} \\ 
+%        & \le \int_0^{\sqrt{\delta d}} \Pr\{X > x\}\, \mathrm{d}{x} 
+%           + \int_{\sqrt{\delta d}}^{\infty} 2e^{-x/2} \, \mathrm{d}{x} \\
+%        & = \int_0^{\sqrt{\delta d}} \Pr\{X > x\}\, \mathrm{d}{x} 
+%           + O(e^{-\sqrt{\delta d}}) \\
+%        & \le \int_0^{\sqrt{\delta d}} \Pr\{X > x\}\, \mathrm{d}{x} 
+%           + O(e^{-\sqrt{\delta d}}) \\
+%        & \le \int_0^{\sqrt{\delta d}} (c+1)/\sqrt{\delta d}\Pr\{X > x\}\, \mathrm{d}{x} 
+%           + O(e^{-\sqrt{\delta d}}) \\
+%
+%\end{align*}
+
+
+
+
+
+
 \end{document}
