--- a/alantree.tex
+++ b/alantree.tex
@@ -1628,9 +1628,11 @@ children, each of which has $\beta$ children, each of which has $\gamma$
 children.  Assign independent $\exponential(1)$ weights to the edges
 of $T_{\alpha,\beta,\gamma}$.
 
-\begin{lem}
+\begin{lem}\lemlabel{tree-easy}
    Let $X$ be the weight of lightest path from the root of
-   $T_{\alpha,\beta,\gamma}$ to some leaf.  Then, for any $0<c<(\alpha\beta\gamma)^{1/3}$,  $\Pr\{X \ge (c+2)(\alpha\beta\gamma)^{-1/3} \} \le e^{-\Omega(c)}$.
+   $T_{\alpha,\beta,\gamma}$ to some leaf.  Then, 
+   for any $0<c<(\alpha\beta\gamma)^{1/3}$,  $\Pr\{X
+   \ge (c+2)(\alpha\beta\gamma)^{-1/3} \} \le 3e^{-c/(4e^2)}$.
 \end{lem}
 
 \begin{proof}
@@ -1641,7 +1643,8 @@ of $T_{\alpha,\beta,\gamma}$.
    and whose (at most two) subsequent edges each have weight at
    most $q$.  We let $X_i$ be the number of
    surviving nodes at level $i$.  It suffices to show that $\Pr\{X_3 =
-   0\} \le e^{-\Omega(c)}$.
+   0\} \le e^{-\Omega(c)}$, since $X_3>0$ implies the existence of at
+   least one root-to-leaf path of length $(c+2)q$.
 
    First, note that $X_1$ is a $\binomial(\alpha, 1-e^{-cq})$ random variable.
    The expected value of $X_1$ is at most
@@ -1657,25 +1660,50 @@ of $T_{\alpha,\beta,\gamma}$.
        & \le \exp\left(-\alpha(1-e^{-cq})/8\right) & \text{(by Chernoff's Bound)}\\
        & \le \exp\left(-\alpha cq/(4e)\right) & \text{}\\
        & = \exp\left(-\alpha^{2/3}c/\left(4e(\beta\gamma)^{1/3}\right)\right) \\
-       & \le \exp\left(-c/(4e)\right) = e^{-\Omega(c)} & \text{(Because $\alpha \ge \beta,\gamma$)}
+       & \le \exp\left(-c/(4e)\right) & \text{(Because $\alpha \ge \beta,\gamma$)}
    \end{align*}
 
    Now note that, conditioned on $X_1$, $X_2$ is a
    $\binomial(\beta X_1,1-e^{-q})$ random variable.  So
    \begin{align*}
-     \Pr\{X_2 \le \alpha\beta cq/(2e) \mid X_1 \ge \alpha cq/e\}
+     \Pr\{X_2 < \alpha\beta cq/(2e) \mid X_1 \ge \alpha cq/e\}
        & \le \exp\left(\alpha\beta (1-e^{-q}) cq/(8e)\right) \\
        & \le \exp\left(\alpha\beta cq^2/(4e^2)\right) \\
        & = \exp\left((\alpha\beta)^{1/3} c/(4e^2\gamma^{2/3})\right) \\
-       & \le \exp\left(c/(4e^2)\right) = e^{-\Omega(c)}
+       & \le \exp\left(c/(4e^2)\right)
    \end{align*}
- 
-it is joined to the
-   root by an edge of weight at most $c(\alpha\beta\gamma)^{-1/3}$.
-   I  
 
-
+   Finally, conditioned on $X_2$, $X_3$ is a 
+   $\binomial(\gamma X_2,1-e^{-q})$ random variable.  So,
+   \begin{align*}
+     \Pr\{X_3 = 0 \mid X_2 \ge \alpha\beta cq/(2e)\}
+     & \le (e^{-q})^{\alpha\beta\gamma cq/(2e)} \\
+     & = e^{-(\alpha\beta\gamma)^{1/3} c/(2e)} \\
+     & \le e^{-c/(2e)} \enspace .
+   \end{align*}
+   Now we are done, since
+   \begin{align*}
+      \Pr\{X_3=0\} & \le \Pr\{X_3=0\mid X_2 \ge \alpha\beta cq/(2e)\} \\
+         & \quad {} + \Pr\{X_2 < \alpha\beta cq/(2e) \mid X_1 \ge \alpha cq/e\} \\
+         & \quad {} + \Pr\{X_1 < \alpha cq/e \mid X_1 \ge \alpha\beta cq/(2e)\} \\
+         & \le e^{-c/(4e)} + e^{-c/(4e^2)} + e^{-c/(2e)} \\
+         & \le 3e^{-c/(4e^2)} \enspace . \qedhere
+   \end{align*}
 \end{proof}
+
+From \lemref{tree-easy}, we can obtain an upper bound on the expected weight, $X$, of the lightest root-to-leaf path of in $T_\alpha,\beta,\gamma$. of the shortest path.  Indeed, setting $x=(c+2)q$, \lemref{tree-easy} implies that, for $0<x<1+2/q$,
+\[
+   \Pr\{X > x\} \le 3e^{-\left(\frac{x}{q}-2\right)/(4e^2)} \enspace .
+\]
+Therefore,
+\begin{align*}
+   \E[X] & = \int_0^{\infty} \Pr\{X > x\} \\
+         & = \int_0^{1} \Pr\{X > x\}\,\mathrm{d}x + \int_1^{\infty} \Pr\{X > x\}\,\mathrm{d}x \\
+         & \le \int_0^{1} 3e^{-\left(\frac{x}{q}-2\right)/(4e^2)}\,\mathrm{d}x + \int_1^{\infty} \Pr\{X > x\}\,\mathrm{d}x \\
+         & = 3e^{2/(4e^2)}\int_0^{1} e^{-x/(4e^2q)}\,\mathrm{d}x + \int_1^{\infty} \Pr\{X > x\}\,\mathrm{d}x \\
+         & = 3e^{2/(4e^2)}4e^2q + \int_1^{\infty} \Pr\{X > x\}\,\mathrm{d}x \\
+         & = 3e^{2/(4e^2)}4e^2(\alpha\beta\gamma)^{-1/3} + \int_1^{\infty} \Pr\{X > x\}\,\mathrm{d}x
+\end{align*}
 
 %From \lemref{easy-key}, we can easily obtain an upper bound on the expected
 %value of the weight, $X$, of the lightest root-to-leaf path in $T$:
