--- a/alantree.tex
+++ b/alantree.tex
@@ -1701,9 +1701,42 @@ Therefore,
          & = \int_0^{1} \Pr\{X > x\}\,\mathrm{d}x + \int_1^{\infty} \Pr\{X > x\}\,\mathrm{d}x \\
          & \le \int_0^{1} 3e^{-\left(\frac{x}{q}-2\right)/(4e^2)}\,\mathrm{d}x + \int_1^{\infty} \Pr\{X > x\}\,\mathrm{d}x \\
          & = 3e^{2/(4e^2)}\int_0^{1} e^{-x/(4e^2q)}\,\mathrm{d}x + \int_1^{\infty} \Pr\{X > x\}\,\mathrm{d}x \\
-         & = 3e^{2/(4e^2)}4e^2q + \int_1^{\infty} \Pr\{X > x\}\,\mathrm{d}x \\
-         & = 3e^{2/(4e^2)}4e^2(\alpha\beta\gamma)^{-1/3} + \int_1^{\infty} \Pr\{X > x\}\,\mathrm{d}x
+         & < 3e^{2/(4e^2)}\int_0^{\infty} e^{-x/(4e^2q)}\,\mathrm{d}x + \int_1^{\infty} \Pr\{X > x\}\,\mathrm{d}x \\
+         & = 12e^{2/(4e^2)+2}q + \int_1^{\infty} \Pr\{X > x\}\,\mathrm{d}x \\
+         & = 12e^{2/(4e^2)+2}(\alpha\beta\gamma)^{-1/3} + \int_1^{\infty} \Pr\{X > x\}\,\mathrm{d}x
 \end{align*}
+
+To bound the second integral, we note that $T_{\alpha,\beta,\gamma}$
+contains $\alpha$ edge-disjoint root-to-leaf paths.  Thus, the random
+variable $X$ is not more than the minimum of $\alpha$ independent
+$\erlang(3,1)$ random variables.  The minimum of $\alpha$ independent
+$\erlang(3,1)$ random variables tends in distribution to a random variable
+$M$: $\Pr\{M>x\} = \exp(-x^3\alpha/6)$.  Thus, the second integral above is handled by:
+\begin{align*}
+   \E[X] & = \int_1^{\infty} \Pr\{X > x\} \\
+         & \le \int_1^{\infty} \Pr\{M > x\} \\
+         & \le \int_1^{\infty} \Pr\{M > x\} \\
+
+
+
+
+         & = \int_0^{1} \Pr\{X > x\}\,\mathrm{d}x + \int_1^{\infty} \Pr\{X > x\}\,\mathrm{d}x \\
+         & \le \int_0^{1} 3e^{-\left(\frac{x}{q}-2\right)/(4e^2)}\,\mathrm{d}x + \int_1^{\infty} \Pr\{X > x\}\,\mathrm{d}x \\
+         & = 3e^{2/(4e^2)}\int_0^{1} e^{-x/(4e^2q)}\,\mathrm{d}x + \int_1^{\infty} \Pr\{X > x\}\,\mathrm{d}x \\
+         & < 3e^{2/(4e^2)}\int_0^{\infty} e^{-x/(4e^2q)}\,\mathrm{d}x + \int_1^{\infty} \Pr\{X > x\}\,\mathrm{d}x \\
+         & = 12e^{2/(4e^2)+2}q + \int_1^{\infty} \Pr\{X > x\}\,\mathrm{d}x \\
+         & = 12e^{2/(4e^2)+2}(\alpha\beta\gamma)^{-1/3} + \int_1^{\infty} \Pr\{X > x\}\,\mathrm{d}x
+\end{align*}
+
+
+
+
+
+
+, and $\E[Z]= \int_0^\infty \exp(-z^3/6)\,
+\mathrm{d}z = 6^{1/3}\Gamma (1/3) / 3$. 
+
+
 
 %From \lemref{easy-key}, we can easily obtain an upper bound on the expected
 %value of the weight, $X$, of the lightest root-to-leaf path in $T$:
